pashok has been added to 404 page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,27 @@
   <script src="main.js"></script>
 </head>
 <body>
+  <img src="site_images/logo.png" alt="logo">
+  <div>
+  <h1>Инженерная психология (ИНИС)</h1>
+</div>
+<div>
+<ul><li><a href="not_implemented.html">T-shirts</a></li>
+  <li><a href="not_implemented.html">Hoodies</a></li>
+  <li><a href="not_implemented.html">Create your own</a></li>
+  <li><a href="not_implemented.html">About us</a></li>
+  <li><a href="not_implemented.html">Your account</a></li></ul>
+</div>
+<div><img src="site_images/home.png"alt="home"></div>
+<div><div><h2>Мы не поставляем майки. Нас нет.</h2><p>Мы продаем майки. Мы любим делать это, но имайте в виду, что у нас нет инфраструктуры, цели поставок или производства, чтобы на самом деле их изготавливать. Но эти майки всегда будут, в вашем воображении :-)</p></div>
+<div><h2>Создай майку, но помоги нам сделать это!</h2><p>nорапшыолварыщшврашfsmkd</p></div></div>
+<div>
+  <ul><li><a href="not_implemented.html">Contact us</a></li>
+    <li><a href="not_implemented.html">Site map</a></li>
+    <li><a href="not_implemented.html">Privacy policy</a></li>
+    <li><a href="not_implemented.html">Careers</a></li>
+    <li><a href="not_implemented.html">Reviews</a></li></ul>
+  </div>
   <!-- Your Code Here -->
 </body>
 </html>
