--- a/not_implemented.html
+++ b/not_implemented.html
@@ -13,6 +13,9 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+  <div><img src="site_images/404.jpg"alt="404"><p>Я еще не написал эту страницу. Вали обратно</p></div>
+  <div><a href="index.html">Back</a></div>
+
   <!-- Your Code Here -->
 </body>
 </html>
