--- a/details.html
+++ b/details.html
@@ -12,13 +12,42 @@
   <!-- Your CSS Code -->
   <link rel="stylesheet" type="text/css" href="style.css">
 
-  <!-- JSON Shirt Object -->
-  <script src="shirts.js"></script>
-
-  <!-- Your JS Code -->
-  <script src="main.js"></script>
 </head>
 <body onload="initDetails()">
-  <!-- Your Code Here -->
+  <header>
+    <div class="header-logo">
+      <img src="site_images/logo.png" alt="logo" class="logo-img">
+    </div>
+    <div class="header-name">
+      Инженерная психология (ИНИС)
+    </div>
+  </header>
+  <nav>
+    <ul class="list">
+      <li><a href="products.html">T-Shirt</a></li>
+      <li><a href="not_implemented.html">Hoodies</a></li>
+      <li><a href="not_implemented.html">Create Your Own</a></li>
+      <li><a href="not_implemented.html">About Us</a></li>
+      <li><a href="not_implemented.html">Your Account</a></li>
+    </ul>
+  </nav>
+  <main>
+    <div id = "detail">
+    </div>
+  </main>
+  <footer>
+    <ul class="list">
+      <li><a href="not_implemented.html">Contact Us</a></li>
+      <li><a href="not_implemented.html">Site Map</a></li>
+      <li><a href="not_implemented.html">Privacy Policy</a></li>
+      <li><a href="not_implemented.html">Careers</a></li>
+      <li><a href="not_implemented.html">Reviews</a></li>
+    </ul>
+  </footer>
+
+  <!-- JSON Shirt Object -->
+  <script src="shirts.js"></script>
+  <!-- Your JS Code -->
+  <script src="main.js"></script>
 </body>
 </html>
