--- a/index.html
+++ b/index.html
@@ -1,45 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>INIS LAB1 - Home</title>
+    <title>INIS LAB1 - Home</title>
 
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@200;500&family=Open+Sans&display=swap" rel="stylesheet">
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@200;500&family=Open+Sans&display=swap" rel="stylesheet">
 
-  <!-- Your CSS Code -->
-  <link rel="stylesheet" type="text/css" href="style.css">
+    <!-- Your CSS Code -->
+    <link rel="stylesheet" type="text/css" href="style.css">
 
-  <!-- JSON Shirt Object -->
-  <script src="shirts.js"></script>
+  </head>
+  <body>
+  <header>
+    <div class="header-logo">
+      <img src="site_images/logo.png" alt="logo" class="logo-img">
+    </div>
+    <div class="header-name">
+      Инженерная психология (ИНИС)
+    </div>
+  </header>
+  <nav>
+    <ul class="list">
+      <li><a href="products.html">T-Shirt</a></li>
+      <li><a href="not_implemented.html">Hoodies</a></li>
+      <li><a href="create_your_own.html">Create Your Own</a></li>
+      <li><a href="not_implemented.html">About Us</a></li>
+      <li><a href="not_implemented.html">Your Account</a></li>
+    </ul>
+  </nav>
 
-  <!-- Your JS Code -->
-  <script src="main.js"></script>
-</head>
-<body>
-  <img src="site_images/logo.png" alt="logo">
-  <div>
-  <h1>Инженерная психология (ИНИС)</h1>
-</div>
-<div>
-<ul><li><a href="not_implemented.html">T-shirts</a></li>
-  <li><a href="not_implemented.html">Hoodies</a></li>
-  <li><a href="not_implemented.html">Create your own</a></li>
-  <li><a href="not_implemented.html">About us</a></li>
-  <li><a href="not_implemented.html">Your account</a></li></ul>
-</div>
-<div><img src="site_images/home.png"alt="home"></div>
-<div><div><h2>Мы не поставляем майки. Нас нет.</h2><p>Мы продаем майки. Мы любим делать это, но имайте в виду, что у нас нет инфраструктуры, цели поставок или производства, чтобы на самом деле их изготавливать. Но эти майки всегда будут, в вашем воображении :-)</p></div>
-<div><h2>Создай майку, но помоги нам сделать это!</h2><p>nорапшыолварыщшврашfsmkd</p></div></div>
-<div>
-  <ul><li><a href="not_implemented.html">Contact us</a></li>
-    <li><a href="not_implemented.html">Site map</a></li>
-    <li><a href="not_implemented.html">Privacy policy</a></li>
-    <li><a href="not_implemented.html">Careers</a></li>
-    <li><a href="not_implemented.html">Reviews</a></li></ul>
-  </div>
-  <!-- Your Code Here -->
-</body>
+
+  <main>
+    <img src="site_images/home.png" alt="" width="100%">
+    <div class="square-container">
+      <div class="square-item">
+        <b>Мы не поставляем майки. Нас нет.</b>
+        <br>Мы продаем майки. Мы любим делать это, но имейте ввиду, что у нас нет инфраструктуры, цепи
+      поставок или производства, чтобы на самом деле их изготавливать или поставлять. Но эти майки всегда
+      будут в вашем воображении =)</div>
+      <div class="square-item">
+        <b>Создай майку, но помоги нам сделать это.</b>
+        <br>
+        Хотя мы и не продаем майки, но мы даем вам возможность создать свою собственную. Мы действительно нуждаемся
+      в вашей помощи, чтобы сделать это. Если ты можешь создать интерфейс, в котором можно создать свой дизайн майки,
+      это будет отлично</div>
+    </div>
+  </main>
+
+  <footer>
+    <ul class="list">
+      <li><a href="not_implemented.html">Contact Us</a></li>
+      <li><a href="not_implemented.html">Site Map</a></li>
+      <li><a href="not_implemented.html">Privacy Policy</a></li>
+      <li><a href="not_implemented.html">Careers</a></li>
+      <li><a href="not_implemented.html">Reviews</a></li>
+    </ul>
+  </footer>
+
+    <!-- JSON Shirt Object -->
+    <script src="shirts.js"></script>
+    <!-- Your JS Code -->
+    <script src="main.js"></script>
+  </body>
 </html>
