--- a/not_implemented.html
+++ b/not_implemented.html
@@ -13,8 +13,13 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div><img src="site_images/404.jpg"alt="404"><p>Я еще не написал эту страницу. Вали обратно</p></div>
-  <div><a href="index.html">Back</a></div>
+
+
+
+<main>
+  <img src="examples/lab1-not_implemented.png" alt="" width="100%">
+</main>
+
 
   <!-- Your Code Here -->
 </body>
